<resources>
    <string name="CuNewpassMismatch_Err">New Password And Current Password Should Not Be Same.</string>
    <string name="CuNewpinMismatch_Err">New M-Pin And Current M-Pin Should Not Be Same.</string>
    <string name="CuNewppwdMismatch_Err">New Password And Current Password Should Not Be Same</string>
    <string name="Cupin_Err">Please Enter 4-8 Digits Current M-Pin.</string>
    <string name="Cupwd_Err">Please Enter 4-8 Digits Current Password</string>
    <string name="Help_Success">Help Success</string>
    <string name="InvalidBydate_Err">Please select date range within 3 months.</string>
    <string name="Invaliddate_Err">Date Should Not Be Greater Than Current Date</string>
    <string name="Invalidfrmdate_Stnd_Err">“From Date” shouldn’t be earlier than current date</string>
    <string name="Invalidfromdate_Err">From Date Should Not Be Greater Than Current Date</string>
    <string name="Invalidfromtodate_Err">To Date Should Be Greater Than From Date</string>
    <string name="Invalidtodate_Err">To Date Should Not Be Greater Than Current Date</string>
    <string name="Invalidtodate_Stnd_Err">“To Date” shouldn’t be earlier than current date</string>
    <string name="MMreg_Success">Registration Success</string>
    <string name="NewConfpassMismatch_Err">New Password And Confirm New Password Should Be Same.</string>
    <string name="NewConfpinMismatch_Err">New M-Pin And Confirm New M-Pin Should Be Same.</string>
    <string name="NewConfpwdMismatch_Err">New Password And Confirm New Password Should Be Same.</string>
    <string name="NewConpasswd_Err">Please Enter 8-16 Digits Confirm New Password.</string>
    <string name="NewConpin_Err">Please Enter 4-8 Digits Confirm New M-Pin.</string>
    <string name="NewConpwd_Err">Please Enter 4-8 Digits Confirm New Password.</string>
    <string name="Newpasswd_Err">Please Enter 8-16 Digits New Password</string>
    <string name="Newpin_Err">Please Enter 4-8 Digits New M-Pin.</string>
    <string name="Newpwd_Err">Please Enter 4-8 Digits New Password</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc">A/C -</string>
    <string name="accNoRecscaNPay">Account No.</string>
    <string name="accNoTxt">Account no. :</string>
    <string name="accNo_err">Please Enter Valid 16 digits Account Number.</string>
    <string name="accSelHint">Select Account</string>
    <string name="accSelHintFrom">Select From Account</string>
    <string name="accSumTitle">Account Summary</string>
    <string name="accept">Accept</string>
    <string name="addBenefiTab">Add</string>
    <string name="addBilerTab">Add</string>
    <string name="addBiler_ResTitle">Biller Added</string>
    <string name="addBillNo">Enter Number</string>
    <string name="addBillerNameHint">Enter Name</string>
    <string name="addBtn">Add</string>
    <string name="add_p2p_txt">Add</string>
    <string name="aed">AED</string>
    <string name="agree">Agree</string>
    <string name="amtHint">Enter Amount</string>
    <string name="amtHintterm">Enter amount (min 5000)</string>
    <string name="amt_err">Please Enter Valid Amount.</string>
    <string name="amt_err_term">Please enter a valid amount (min 5000)</string>
    <string name="amt_mytpl_err">Please enter a valid amount multiples of 10</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annualSelHint">Select Annual Income</string>
    <string name="ans_sec_ques_ttl">Answer security questions</string>
    <string name="ans_the_ques">Answer the questions you chose when you login to the app</string>
    <string name="apPerDailogTitle">Permissions Required</string>
    <string name="apPerDilogMsg">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="apPerOKBtn">Settings</string>
    <string name="appLanchErr">Sorry, We are not able to process your request. Please contact bank.</string>
    <string name="app_name">BOK</string>
    <string name="app_update_digTitle">APP UPDATE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arb">ع</string>
    <string name="atleast_one_num">At least one number</string>
    <string name="atmpin_err">Please enter 4 digits ATM PIN.</string>
    <string name="avoid_easy_pass">Avoid password which is easy to guess</string>
    <string name="b2cTitle">Mobile</string>
    <string name="bankBenffTitle">Bank Beneficiary</string>
    <string name="bankTrfTitle">Bank Transfer</string>
    <string name="bank_name_hint">Bank Name</string>
    <string name="bank_sel_Err">Please Select Bank</string>
    <string name="bankfees">Bank Fees</string>
    <string name="benefBillerDelDialog">Are you sure, you want to delete the biller</string>
    <string name="benefDelDialog">Are you sure, you want to delete the beneficiary</string>
    <string name="benefiTab">Beneficiaries</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="benfAddSucsTite">Beneficiary Added</string>
    <string name="benfName">Beneficiary Name</string>
    <string name="benfNameHint">Enter Beneficiary Name</string>
    <string name="benifiTitle">Manage Beneficiary</string>
    <string name="bilerTab">Billers</string>
    <string name="billMangBtn">Bill\nManagement</string>
    <string name="billMangTitle">Billers</string>
    <string name="billPaySucessTitle">Bill Payment</string>
    <string name="billPayTitle">Bill Payments</string>
    <string name="biller_dropsel_err">Please select company</string>
    <string name="bokAbtURL">http://bankofkhartoum.com/about-us/</string>
    <string name="bokdailyexchange">Exchange\nRate</string>
    <string name="boklgft">BOK</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cDob">Date of Birth</string>
    <string name="cOutBenfConfim">Mobile no.@$#MBNO#@$@Name@$#Name#</string>
    <string name="cOutBokAtmTitle">Cardless via BOK ATM</string>
    <string name="cOutViaWakeel">via Wakeel</string>
    <string name="cOutViabokAtm">via BOK ATM</string>
    <string name="cOutWakeelTitle">Cardless via Wakeel</string>
    <string name="cOutqrGenSubTitile">Share your QR to withdraw cash.</string>
    <string name="call_helpline">Call our helpline</string>
    <string name="call_us">Call 1913/0156661000</string>
    <string name="cancel">Cancel</string>
    <string name="cantSignin">Can’t sign in?</string>
    <string name="cardLimitAmount">Please enter valid amount (1-2000).</string>
    <string name="cardMngmentTtl">Card Management</string>
    <string name="card_active_ttl">Card Activation</string>
    <string name="card_expiry_yymm">Card Expiry YYMM</string>
    <string name="card_no_Last6Digitserr">Please enter last 6 digits card no.</string>
    <string name="card_no_conf_card_shd_sme">Card number and Confirm card number should be same</string>
    <string name="card_no_err">Please enter 16 digits card no.</string>
    <string name="cardmbcifHint">Enter CIF No.</string>
    <string name="cashOutTitle">Cardless Withdrawal</string>
    <string name="cashouBenfTitle">Cardless Beneficiary</string>
    <string name="chLangCode">ar_SA</string>
    <string name="chLangDialogMsg">Are you sure, you want to Change the language from English to Arabic</string>
    <string name="chLangTitle">Change Language</string>
    <string name="chPwdtitle">Change Password</string>
    <string name="change">Change</string>
    <string name="channelSelHint">Select Channel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check">Check</string>
    <string name="checkbookrequest">Cheque Book Request</string>
    <string name="chequeBookConfirmation">From Account|$#ACCNO#|$|Destination branch|$#BRC#|$|Number of leaves|$#LEAF#|$|Fees|$#CHARGES#</string>
    <string name="chip_text">Chip text</string>
    <string name="chpintitle">Change PIN</string>
    <string name="clastLg">Last Login:</string>
    <string name="clastLgTitle">You have Logged Into</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_here_to">Click here to</string>
    <string name="cnfMsg">Please confirm transaction details before confirmation</string>
    <string name="com.crashlytics.android.build_id">06a4eefeb07049df9ce5f61ce548b164</string>
    <string name="comment_error">Please enter the comments</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="continue_txt">Continue</string>
    <string name="contlgft">Help</string>
    <string name="err_digTitle">Error</string>
    <string name="exit_Str">Close</string>
    <string name="fblgft">Facebook</string>
    <string name="linklgft">Linkedin</string>
    <string name="loclgft">Locate Us</string>
    <string name="logout_SubTitle">Session Summary</string>
    <string name="logout_Title">Logged out</string>
    <string name="ok_str">OK</string>
    <string name="survlgft">Survey</string>
    <string name="twitlgft">Twitter</string>
    <string name="youtube">YouTube</string>
</resources>