<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/formBtnLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_submit"
                android:background="@drawable/button"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/continue_txt"
                android:layout_weight="1"
                android:textAllCaps="false"/>
            <Button
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_submitOne"
                android:background="@drawable/button"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ok_str"
                android:layout_weight="1"
                android:textAllCaps="false"/>
            <Button
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_cancel"
                android:background="@drawable/button"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
