<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/failurescreenbg"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/footLay">
        <ImageView
            android:id="@+id/failureIcon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/failure"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/white"
            android:id="@+id/errResultServTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/err_digTitle"
            android:layout_below="@+id/failureIcon"
            android:layout_centerHorizontal="true"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/failureIcon">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/reciept_row_whitebg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp">
                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/failureMesag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"/>
                </LinearLayout>
                <Button
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/failres_Okbtn"
                    android:background="@drawable/failurebutton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:text="@string/ok_str"
                    android:onClick="true"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <View
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <include layout="@layout/footerlay_withoutbg"/>
    </RelativeLayout>
</RelativeLayout>
